components/layout/AppLayout/AppLayout.module.css
.appLayout {
  display: grid;
  min-height: 100vh;
  grid-template-columns: 1fr;

  position: relative; /* 🔥 ВАЖЛИВО */
}
.mainContent {
  min-width: 0;
}

@media screen and (max-width: 1439px) {
  .overlay {
    position: absolute; /* 🔥 бо у тебе контейнер */
    inset: 0;

    background: rgba(0, 0, 0, 0.4);

    opacity: 0;
    transition: opacity 0.3s ease;

    z-index: 999;
  }

  /* коли активний */
  .overlay {
    opacity: 1;
  }
}

@media screen and (min-width: 1440px) {
  .appLayout {
    grid-template-columns: minmax(300px, 0.3fr) minmax(0, 1fr);
  }
}

